--- a/homework_1/requirements.txt
+++ b/homework_1/requirements.txt
@@ -1,6 +1,6 @@
-fastapi[all]==0.104.1
 minio==7.1.17
-names==0.3.0
+pulsar_client[all]==3.3.0
 python-dotenv==1.0.0
+requests==2.31.0
 tqdm==4.66.1
 ujson==5.8.0
